        * `ratification_ts` - the date (timestamp) of TAA ratification by network government.
        * `retirement_ts` - the date (timestamp) of TAA retirement.
    * Added a new function `indy_build_disable_all_txn_author_agreements_request` to disable all Transaction Author Agreement on the ledger.

## 1.13.0
* Added "names" parameter to Proof Request Revealed Attributes (IS-1381)

## 1.12.0
* Minimal *EXPERIMENTAL* support of Fully-Qualified identifiers:
    * extended `did_info` parameter of `indy_create_and_store_my_did` function to accepts optional `method_name` filed. This field should be used to create fully qualified DID.
    * all functions can work with fully-qualified identifiers (new way) as well as with unqualified.
    * added a new function -- `indy_to_unqualified` -- that gets unqualified form of a fully qualified identifier.
    * proof requests now support versioning (`ver` field) -- now it specifies whether restrictions are full qualified or not.
         - omit or set "1.0" to use unqualified identifiers.
         - set "2.0" to use fully qualified identifiers.

        The same format of identifiers will be used in generated proof and must be used for proof verification.

    * added a new function -- `indy_qualify_did` -- that updates DID stored in the wallet to make it fully qualified, or to do other DID maintenance.
    * all functions in Ledger API can accept fully-qualified identifiers but always return results in an unqualified form.
* The default value of `Protocol Version` was changed on 2. Henceforth `indy_set_protocol_version` function should be called if you are going to work with Indy-Node 1.3 and less.
* Bugfixes
    * Fixed `attr::{}::value` and `attr::{}::marker` WQL tags (IS-1363)
    * Fixed `attr::{}::value` verification (IS-1380, thanks @nrempel for reporting the vulnerability)
    * others minor bugfixes

## 1.11.1
* Added new functions to Anoncreds API to rotate credential definition: