@@ -1021,7 +1021,7 @@ public class Anoncreds extends IndyJava.API {
 	 *     {
 	 *         "name": string,
 	 *         "version": string,
-	 *         "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+	 *         "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
 	 *         "requested_attributes": { // set of requested attributes
 	 *              "<attr_referent>": <attr_info>, // see below
 	 *              ...,
@@ -1130,7 +1130,7 @@ public class Anoncreds extends IndyJava.API {
 	 *     {
 	 *         "name": string,
 	 *         "version": string,
-	 *         "nonce": string, - a big number represented as a string (use `generateNonce` function to generate 80-bit number)
+	 *         "nonce": string, - a decimal number represented as a string (use `generateNonce` function to generate 80-bit number)
 	 *         "requested_attributes": { // set of requested attributes
 	 *              "<attr_referent>": <attr_info>, // see below
 	 *              ...,
@@ -1306,7 +1306,7 @@ public class Anoncreds extends IndyJava.API {
 	 *     {
 	 *         "name": string,
 	 *         "version": string,
-	 *         "nonce": string, - a big number represented as a string (use `generateNonce` function to generate 80-bit number)
+	 *         "nonce": string, - a decimal number represented as a string (use `generateNonce` function to generate 80-bit number)
 	 *         "requested_attributes": { // set of requested attributes
 	 *              "<attr_referent>": <attr_info>, // see below
 	 *              ...,
