@@ -1128,7 +1128,7 @@ async def prover_get_credentials_for_proof_req(wallet_handle: int,
         {
             "name": string,
             "version": string,
-            "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+            "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
             "requested_attributes": { // set of requested attributes
                  "<attr_referent>": <attr_info>, // see below
                  ...,
@@ -1241,7 +1241,7 @@ async def prover_search_credentials_for_proof_req(wallet_handle: int,
         {
             "name": string,
             "version": string,
-            "nonce": string, - a big number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
+            "nonce": string, - a decimal number represented as a string (use `indy_generate_nonce` function to generate 80-bit number)
             "requested_attributes": { // set of requested attributes
                  "<attr_referent>": <attr_info>, // see below
                  ...,
@@ -1435,7 +1435,7 @@ async def prover_create_proof(wallet_handle: int,
         {
             "name": string,
             "version": string,
-            "nonce": string, - a big number represented as a string (use `generate_nonce` function to generate 80-bit number)
+            "nonce": string, - a decimal number represented as a string (use `generate_nonce` function to generate 80-bit number)
             "requested_attributes": { // set of requested attributes
                  "<attr_referent>": <attr_info>, // see below
                  ...,
@@ -1618,7 +1618,7 @@ async def verifier_verify_proof(proof_request_json: str,
         {
             "name": string,
             "version": string,
-            "nonce": string, - a big number represented as a string (use `generate_nonce` function to generate 80-bit number)
+            "nonce": string, - a decimal number represented as a string (use `generate_nonce` function to generate 80-bit number)
             "requested_attributes": { // set of requested attributes
                  "<attr_referent>": <attr_info>, // see below
                  ...,
